# sgfx

./: .gitignore  CMakeLists.txt  Makefile
examples/: CMakeLists.txt  demo_opengl.c  fs_color.glsl  vs_basic.glsl
include/sgfx/: sgxf.h
src/: CMakeLists.txt  array_list.c  array_list.h  core.h  opengl.c  opengl.h  sgfx.c  window.c  window.h
test/: CMakeLists.txt  test.c  test.h  test_array_list.c  test_opengl.c
